--- a/package.json
+++ b/package.json
@@ -1,10 +1,13 @@
 {
   "name": "menu-server",
   "version": "1.0.0",
+  "engines": {
+    "node": "12.16.3"
+  },
   "description": "Menu for Uplands pub",
   "main": "server.js",
   "dependencies": {
-    "bcrypt": "^4.0.1",
+    "bcrypt": "^5.0.0",
     "express": "^4.17.1",
     "mongoose": "^5.9.20",
     "request": "^2.88.2"
