--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "express": "^4.17.1",
+    "express-enforces-ssl": "^1.1.0",
+    "heroku-ssl-redirect": "^0.1.1",
     "mongoose": "^5.9.20",
     "request": "^2.88.2"
   },
